@@ -16,17 +16,16 @@ A Project that was made for my group project class, but has been killed to do my
 ---
 
 ## Features
-- Create your own virtual pet with different sprites.
-- Track the pet's health, happiness, hunger, and sleep levels.
-- Feed your pet, play games, or let it rest.
-- Dynamic visuals using **JavaFX**.
-- Save and load pet progress between sessions.
+- Search sites and display a products along with prices and other items
+- Ability to add the products to a shopping cart
+- Ability to checkout the shopping cart
 
 ---
 
 ## Technologies Used
-- **Java**: Core language for application logic.
-- **JavaFX**: For GUI design and interaction.
+- **QML**: Front End
+- **C++**: Backend
+- **CMake**: Compiler
 
 ---
 
@@ -34,52 +33,38 @@ A Project that was made for my group project class, but has been killed to do my
 
 ### Prerequisites
 Ensure you have the following installed:
-- Java Development Kit (JDK) 11 or higher
-- An IDE like IntelliJ IDEA, or Eclipse.
+- CMake
+- Qt6Core
 
 ### Steps to Run Locally
 1. Clone this repository:
    ```bash
-   git clone https://gitlab.sci.uwo.ca/courses/2024/09/COMPSCI2212/group37.git
+   git clone https://github.com/AFamiliarQueasySensation/EcomSite.git
 
-2. Navigate to the project directory:
-    ```bash
-    cd ProjectFX2/Project2212/src
-3. Open the Project in your IDE.
-4. Create a new run configuration with the following details:<br>
-**Main Class**: application.Main <br>
-**Project**: Project2212<br>
-**VM Options**: --module-path "C:\Users\vonha\Desktop\openjfx-23.0.1_windows-x64_bin-sdk\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.graphics,javafx.fxml,javafx.media<br><br>
-_**NOTE**: Path should be replaced with the actual path to your javaFX library_.
+2. Run Good luck
 
-5. Save the configuration.
+
 
 ## How To Use
-1. Run the application and create your virtual pet by selecting a sprite.
-2. Use the interactive buttons to: <br>
-- **Feed:** Keep your pet's hunger level in check.<br>
-- **Play:** Ensure your pet stays happy.<br>
-- **Rest:** Allow your pet to recharge its energy.
-3. Save your progress when exiting the game.
+1. Search a website and should display results
+2. Click on the Product and it will be added to the cart
 
 ## Screenshots
 _Main Menu_ <br>
-<img src="https://i.imgur.com/Dk0OhfN.png" alt="Main Menu" width="300">
+<img src="https://imgur.com/a/CXeYEU5" alt="Main Menu" width="300">
 
-_New Game_ <br>
-<img src="https://i.imgur.com/7V5C0WQ.png" alt="New Game" width="300">
+_Display Results_ <br>
+<img src="https://imgur.com/3MIXwhm" alt="Display Results" width="300">
 
-_Game World_ <br>
-<img src="https://i.imgur.com/vjeFsPq.png" alt="Game World" width="300">
+_Item In Cart_ <br>
+<img src="https://imgur.com/2V2HRzB" alt="Item In Cart" width="300">
 
 
-## Future Improvements
-- Add more pet types and animations.
-- Implement a pet aging system with unique stages of growth.
-- Introduce new activities like teaching tricks or dressing up the pet.
-- Multiplayer feature to let users interact with each other's pets.
+## Issues
+- Shopify doesnt allow 3rd party apps to checkout using their api
+- Teacher last minute cashed out on only using c++ (Not sure why this makes any sense but sure)
 
 ---
 
-_**PetPal created by:** Keito Hyde, Mahip Varlani, Shivansh Kushwaha, Grant Von Hagen, Maya Al Hourani_
+_**PetPal created by:** Aryan Malhotra, Shayan Mohsin, Shazli Mekrani, Siddharth Singh, Grant Von Hagen_
 
